--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
     "expo": "^54.0.25",
+    "expo-audio": "^1.0.15",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
