Add security to endpoint

--- a/app.json
+++ b/app.json
@@ -42,10 +42,7 @@
         }
       ],
       [
-        "expo-audio",
-        {
-          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
-        }
+        "expo-audio"
       ]
     ],
     "experiments": {
