--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.6.1",
         "express": "^4.21.2",
+        "express-rate-limit": "^8.2.1",
+        "helmet": "^8.1.0",
         "node-cache": "^5.1.2",
         "nodemon": "^3.1.11",
         "openai": "^4.104.0"
