Setup Sentry envs

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "type": "commonjs",
     "scripts": {
         "start": "nodemon server.js",
-        "start-prod": "node server.js"
+        "start-prod": "NODE_ENV=production node server.js"
     },
     "dependencies": {
         "@google/genai": "^1.29.1",
