--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "helmet": "^8.1.0",
         "node-cache": "^5.1.2",
         "nodemon": "^3.1.11",
-        "openai": "^4.104.0"
+        "openai": "^4.104.0",
+        "winston": "^3.18.3"
     }
 }
